yaml/dc_jokeapp.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: jokesite
  labels:
    app: jokesite
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - jokesite
        from:
          kind: ImageStreamTag
          namespace: jokesite
          name: 'jokesite:latest'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentconfig: jokesite
  template:
    metadata:
      creationTimestamp: null
      labels:
        deploymentconfig: jokesite
    spec:
      containers:
        - name: jokesite
          image: >-
            quay.io/bicycleboy/jokesite:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
