yaml/svc_jokeapp.yaml
kind: Service
apiVersion: v1
metadata:
  name: jokesite
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jokesite
    deploymentconfig: jokesite
