yaml/svc_postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  annotations:
    description: Exposes the database server
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: postgresql
